Fix about page  picture  stretching bug

--- a/css/about.css
+++ b/css/about.css
@@ -378,12 +378,12 @@ footer {
   }
 
   .cs-left {
-    height: 100%;
+    height: auto;
     
   }
 
   .cs-left img {
-    height: 100%;
+    height: auto;
   }
 
   .cs-right {
